style: Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/constants/_dimensions.scss
+++ b/styles/constants/_dimensions.scss
@@ -2,3 +2,4 @@ $gnb-height-sm: 50px;
 $gnb-height-md: 80px;
 $lnb-height-sm: 40px;
 $lnb-height-md: 50px;
+$order-cta-height: 56px;
