--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,5 +1,6 @@
 .global-footer {
   background-color: $background;
+  margin-bottom: $order-cta-height;
   padding-bottom: 40px;
   padding-top: 32px;
 
@@ -45,6 +46,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
